# cheminee

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.gitlab
benches/: tanimoto_bench.rs
src/: lib.rs  rdkit_tests.rs
src/actions/: fetch_pubchem.rs  index_pubchem_sdf.rs  search.rs  stream_pubchem_sdf.rs
src/pubchem/: fetch.rs
src/tantivy/: mod.rs
tests/: rdkit_tests.rs
