[package]
name = "cheminee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0"
rdkit-sys = "0.1.10"
#rdkit-sys = { path = "../rdkit-sys" }
reqwest = "0"
tokio = { version = "1", features = ["full"] }
regex = "1"
tantivy = "0"
serde_json = { version = "1" }
serde = "*"
env_logger = "0"
log = "0"
clap = "3.1"
petal-decomposition = "0.6.1"
ndarray = "0.15.4"
smartcore = "0.2.0"
linfa = "0.5.1"
linfa-reduction = "0.5.1"